# PhotoLibraryCleaner

./: .gitignore  README.md  pyproject.toml  quarantine.py  requirements.txt  xmp.py
.claude/: settings.local.json
src/photo_cleaner/: cli.py
src/photo_cleaner/detectors/: __init__.py  base.py  whatsapp.py
tests/: conftest.py  test_detectors.py  test_integration.py  test_rating_filter.py  test_xmp.py
